// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sploader should rotate with 13% 1`] = `
<div
  className="container"
>
  <div
    className="sploader_container"
  >
    <div
      className="svg_container"
    >
      <SploaderGraphics
        SploaderSvg={
          Object {
            "current": null,
          }
        }
        percent={13}
      />
    </div>
    <div
      className="loading_value"
    >
      13
      <span
        className="percent"
      >
        %
      </span>
    </div>
  </div>
  <div
    className="buttons"
  >
    <Button
      onClick={[Function]}
      text="start spinning"
    />
    <Button
      onClick={[Function]}
      text="stop spinning"
    />
  </div>
</div>
`;

exports[`sploader shouuld pass the props 1`] = `
Object {
  "percent": 20,
}
`;

exports[`sploader shouuld render with default prop 1`] = `
Object {
  "percent": 15,
}
`;
